Register beans at build step